--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "fullcalendar": "^5.11.3",
+    "mongoose": "^6.7.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
